apps/base/siyuan/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: siyuan
  labels:
    app.kubernetes.io/name: siyuan
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: siyuan
  template:
    metadata:
      labels:
        app.kubernetes.io/name: siyuan
    spec:
      containers:
        - name: siyuan
          image: b3log/siyuan:v3.8.6
          args:
            - serve
            - --workspace=/siyuan/workspace/
            - --port=6806
            - --accessAuthCode=$(SIYUAN_ACCESS_AUTH_CODE)
          ports:
            - name: http
              containerPort: 6806
              protocol: TCP
          volumeMounts:
            - name: siyuan-data
              mountPath: /siyuan/workspace
      volumes:
        - name: siyuan-data
          persistentVolumeClaim:
            claimName: siyuan-data
