apps/base/siyuan/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: siyuan
  namespace: siyuan
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: kube-system
  hostnames:
    - siyuan.nathan-fouere.com
  rules:
    - backendRefs:
        - name: siyuan
          port: 6806
